# webcam_snapshot

./: CMakeLists.txt  MainTakePicture.cpp  README.md  package.xml
include/: Capture.hpp
include/webcam_snapshot/: TakePicture.hpp
src/: Capture.cpp  TakePicture.cpp
