<?xml version="1.0"?>
<package format="2">
  <name>webcam_snapshot</name>
  <version>0.0.0</version>
  <description>The webcam_snapshot package</description>
  <maintainer email="annamitgom@gmail.com">anna</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/webcam_snapshot</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
